--- a/pom.xml
+++ b/pom.xml
@@ -1570,6 +1570,13 @@
                     </tagListOptions>
                 </configuration>
             </plugin>
+            <plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-gpg-plugin</artifactId>
+				<configuration>
+					<skip>true</skip>
+				</configuration>
+			</plugin>
         </plugins>
     </reporting>
     <profiles>
