--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
     </parent>
     <groupId>org.kill-bill.billing</groupId>
     <artifactId>killbill-oss-parent</artifactId>
-    <version>0.13-SNAPSHOT</version>
+    <version>0.13.3</version>
     <packaging>pom</packaging>
     <name>Kill Bill OSS Parent</name>
     <description>Parent pom for Kill Bill projects</description>
@@ -1417,7 +1417,7 @@
                     <version>1.6.2</version>
                     <extensions>true</extensions>
                     <configuration>
-						<skipStaging>true</skipStaging>
+                        <skipStaging>true</skipStaging>
                     </configuration>
                 </plugin>
             </plugins>
@@ -1539,6 +1539,7 @@
                         <link>http://download.oracle.com/javase/6/docs/api/</link>
                     </links>
                     <linksource>true</linksource>
+                    <skip>true</skip>
                 </configuration>
             </plugin>
             <plugin>
