--- a/pom.xml
+++ b/pom.xml
@@ -1454,6 +1454,14 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.5</version>
+                <configuration>
+                	<skip>true</skip>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-deploy-plugin</artifactId>
                 <version>2.8.2</version>
                 <configuration>
@@ -1539,7 +1547,6 @@
                         <link>http://download.oracle.com/javase/6/docs/api/</link>
                     </links>
                     <linksource>true</linksource>
-                    <skip>true</skip>
                 </configuration>
             </plugin>
             <plugin>
