--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
     </parent>
     <groupId>org.kill-bill.billing</groupId>
     <artifactId>killbill-oss-parent</artifactId>
-    <version>0.14-SNAPSHOT</version>
+    <version>0.13.5</version>
     <packaging>pom</packaging>
     <name>Kill Bill OSS Parent</name>
     <description>Parent pom for Kill Bill projects</description>
@@ -107,8 +107,8 @@
         <killbill-api.version>0.14</killbill-api.version>
         <killbill-base-plugin.version>0.1.0</killbill-base-plugin.version>
         <killbill-client.version>0.5</killbill-client.version>
-        <killbill-commons.version>0.4-SNAPSHOT</killbill-commons.version>
-        <killbill-platform.version>0.3-SNAPSHOT</killbill-platform.version>
+        <killbill-commons.version>0.3.1</killbill-commons.version>
+        <killbill-platform.version>0.3.1</killbill-platform.version>
         <killbill-plugin-api.version>0.9</killbill-plugin-api.version>
         <logback.version>1.1.3</logback.version>
         <metrics-palominolabs.version>3.1.2</metrics-palominolabs.version>
@@ -1454,14 +1454,6 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.5</version>
-                <configuration>
-                	<skip>true</skip>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-deploy-plugin</artifactId>
                 <version>2.8.2</version>
                 <configuration>
@@ -1472,6 +1464,14 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.5</version>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
