--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
     </parent>
     <groupId>org.kill-bill.billing</groupId>
     <artifactId>killbill-oss-parent</artifactId>
-    <version>0.14-SNAPSHOT</version>
+    <version>0.14.1-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>Kill Bill OSS Parent</name>
     <description>Parent pom for Kill Bill projects</description>
@@ -107,8 +107,8 @@
         <killbill-api.version>0.14</killbill-api.version>
         <killbill-base-plugin.version>0.1.0</killbill-base-plugin.version>
         <killbill-client.version>0.5</killbill-client.version>
-        <killbill-commons.version>0.3.1</killbill-commons.version>
-        <killbill-platform.version>0.3.1</killbill-platform.version>
+        <killbill-commons.version>0.4.1-SNAPSHOT</killbill-commons.version>
+        <killbill-platform.version>0.4.1-SNAPSHOT</killbill-platform.version>
         <killbill-plugin-api.version>0.9</killbill-plugin-api.version>
         <logback.version>1.1.3</logback.version>
         <metrics-palominolabs.version>3.1.2</metrics-palominolabs.version>
